--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "svelte": "^3.52.0",
+    "svelte-grid": "^5.1.1",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "svelte-local-storage-store": "^0.3.1"
   }
 }
