--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "my-app",
+  "name": "bgclock",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "@tsconfig/svelte": "^3.0.0",
     "svelte": "^3.52.0",
-    "svelte-grid": "^5.1.1",
+    "svelte-check": "^2.9.2",
+    "svelte-preprocess": "^4.10.7",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4",
     "vite": "^3.2.3"
-  },
-  "dependencies": {
-    "svelte-local-storage-store": "^0.3.1"
   }
 }
