--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
-    "svelte-local-storage-store": "^0.3.1"
+    "svelte-local-storage-store": "^0.3.1",
+    "svelte-sound": "^0.3.0"
   }
 }
